--- a/mine/clock_mine.css
+++ b/mine/clock_mine.css
@@ -24,7 +24,7 @@
     border-radius: 30px 30px 30px 30px;
     background: white;
     z-index: -2;
-    font-family: 'C4 Tellurium E 04', 'C4 Bismuth E 04', 'C4 RheniumR E 04', 'C4 タンタル E 04';
+    font-family: 'ロダンNTLG EB', 'C4 Tellurium E 04', 'C4 Bismuth E 04', 'C4 RheniumR E 04', 'C4 タンタル E 04';
     color: #2d2d2d;
 }
 
