--- a/clock.css
+++ b/clock.css
@@ -7,7 +7,6 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap');
 
-
 #secCanvas {
     display: block;
     margin: 0 auto;
@@ -15,7 +14,7 @@
     max-width: 100%;
   }
 
-.dateall {
+#dateall {
     display: block;
     position: relative;
     overflow: hidden;
@@ -29,16 +28,15 @@
     border-width:  4px 4px 15px;
     border-radius: 20px 20px 25px 25px;
     background: white;
-    z-index: -2;
     font-family: 'Roboto';
     color: #2d2d2d;
 }
 
-.background {
+#gloss {
     background: linear-gradient(0deg, #fff9, #cccd 5%, #fff8 50%);
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 1;
     position: absolute;
 }
 
@@ -46,15 +44,17 @@
     position: relative;
     margin: -20px 0 -10px;
     font-size: 150px;
+    z-index: 2;
 }
 
 #sec {
     position: relative;
     top: -10px;
     margin: 0 10px;
+    z-index: 2;
 }
 
-.datenday {
+#datenday {
     margin: 0 auto;
 }
 
@@ -65,6 +65,7 @@
     left: 50%;
     transform: translateX(-50%) translateY(-100%);
     float: left;
+    z-index: 2;
 }
 
 #day {
@@ -73,34 +74,32 @@
     margin: 0 0 0 73%;
     text-align: left;
     position: relative;
+    z-index: 2;
 }
 
-.star0 {
+#star0 {
     position: absolute;
     transform: rotate(60deg);
 }
-.pos-star0 {
+#pos-star0 {
     position: absolute;
     transform: translate(250px,40px);
-    z-index: -1;
 }
 
-.star1 {
+#star1 {
     transform: rotate(10deg);
 }
-.pos-star1 {
+#pos-star1 {
     position: absolute;
     transform: translate(0px,-110px) scale(0.6);
-    z-index: -1;
 }
 
-.star2 {
+#star2 {
     transform: rotate(50deg);
 }
-.pos-star2 {
+#pos-star2 {
     position: absolute;
     transform: translate(-100px,50px) scale(0.3);
-    z-index: -1;
 }
 
 .star {
@@ -109,4 +108,12 @@
     position: relative;
     clip-path: polygon(50% 1%, 64% 33%, 98% 37%, 72% 60%, 79% 92%, 50% 75%, 21% 92%, 28% 60%, 2% 37%, 36% 33%);
     background: #ddd;
+}
+
+a {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    left: 0;
+    z-index: 3;
 }
