--- a/mine/clock_mine.css
+++ b/mine/clock_mine.css
@@ -4,103 +4,121 @@
 
 #secCanvas {
     display: block;
-    margin: 0 auto;
-    padding: 2.5px;
+    margin: 0px auto;
     max-width: 100%;
   }
 
-.dateall {
+#dateall {
     display: block;
     position: relative;
     overflow: hidden;
-    width: 610px;
+    width: 540px;
     margin-right: auto;
     margin-left: auto;
     text-align: center;
-    font-weight: bold;
+    font-weight: 600;
     border-style: solid;
     border-color: #000;
-    border-width:  4px 4px 15px;
+    border-width:  6px 6px 18px;
     border-radius: 30px 30px 30px 30px;
     background: white;
-    z-index: -2;
-    font-family: 'ロダンNTLG EB', 'C4 Tellurium E 04', 'C4 Bismuth E 04', 'C4 RheniumR E 04', 'C4 タンタル E 04';
+
+    font-family: 'FOT-ロダンNTLG Pro';
     color: #2d2d2d;
 }
 
-.background {
-    background: linear-gradient(0deg, #fff9, #cccd 5%, #fff8 50%);
+#gloss {
+    background: #fefefe;
+    /* background: linear-gradient(0deg, #fff9, #cccd 5%, #fff8 50%); */
     /* background: aqua; */
     width: 100%;
     height: 100%;
-    z-index: 0;
+    z-index: 1;
     position: absolute;
+}
+
+#background2 {
+    background: #545454da;
+    width: 90%;
+    height: 22%;
+    position: absolute;
+    left: 5%;
+    bottom: 2%;
+    margin: auto;
+    border-radius: 10px;
+    z-index: 1;
 }
 
 #time {
     position: relative;
-    margin: 0px;
+    margin: -70px 0 -60px;
     font-size: 150px;
+    z-index: 1;
 }
 
 #sec {
     position: relative;
-    top: -10px;
+    top: -20px;
+    margin: 0 10px;
+    z-index: 1;
 }
 
-.datenday {
-    margin: 0 auto;
+#datenday {
+    margin: -25px 0 -15px;
     /* position: relative; */
     /* background-color: darkgoldenrod; */
 }
 
 #date {
-    font-size: 50px;
-    margin: 0 auto;
+    font-size: 45px;
+    margin: auto;
     position: absolute;
     left: 50%;
     transform: translateX(-50%) translateY(-100%);
     float: left;
+    color: #FEFEFE;
+    z-index: 2;
     /* top: 20%; */
     /* background-color: coral; */
 }
 
 #day {
-    font-size: 40px;
+    font-size: 35px;
     width: calc(100% / 4);
-    margin: 0 0 0 75%;
+    margin: 0 0 6px 73%;
     text-align: left;
     position: relative;
+    z-index: 2;
     /* left: 50%; */
     /* background-color: blueviolet; */
     /* color: #ffaa00; */
 }
 
-.star0 {
+#star0 {
     position: absolute;
     transform: rotate(60deg);
 }
-.pos-star0 {
+#pos-star0 {
     position: absolute;
     transform: translate(360px,0px);
     /* transform: scale(0.5, 0.5) translate(100px, 1400px); */
     z-index: -1;
 }
 
-.star1 {
+#star1 {
     transform: rotate(10deg);
 }
-.pos-star1 {
+#pos-star1 {
     position: absolute;
     transform: translate(0px,-110px) scale(0.6);
     /* transform: scale(0.5, 0.5) translate(100px, 1400px); */
     z-index: -1;
 }
 
-.star2 {
+#star2 {
     transform: rotate(50deg);
 }
-.pos-star2 {
+#pos-star2 {
     position: absolute;
     transform: translate(-100px,50px) scale(0.3);
     /* transform: scale(0.5, 0.5) translate(100px, 1400px); */
@@ -109,12 +127,12 @@
 
 
 .star {
-    width: 300px;
+    /* width: 300px;
     height: 300px;
     position: relative;
-    clip-path: polygon(50% 1%, 64% 33%, 98% 37%, 72% 60%, 79% 92%, 50% 75%, 21% 92%, 28% 60%, 2% 37%, 36% 33%);
+    clip-path: polygon(50% 1%, 64% 33%, 98% 37%, 72% 60%, 79% 92%, 50% 75%, 21% 92%, 28% 60%, 2% 37%, 36% 33%); */
     /* clip-path: polygon(50% 1%, 62% 36%, 98% 37%, 69% 59%, 79% 92%, 50% 73%, 21% 92%, 31% 59%, 2% 37%, 38% 36%); */
     /* clip-path: polygon(50% 1%, 61% 37%, 98% 37%, 68% 58%, 79% 92%, 50% 71%, 21% 92%, 32% 58%, 2% 37%, 39% 37%); */
     background: #ddd;
-    /* display: none; */
 }
+
