--- a/clock.css
+++ b/clock.css
@@ -24,9 +24,10 @@
     text-align: center;
     font-weight: bold;
     border-style: solid;
+    border-width:  4px;
+    border-radius: 20px;
     border-color: #000;
-    border-width:  4px 4px 15px;
-    border-radius: 20px 20px 25px 25px;
+    box-shadow: 0 11px #000;
     background: white;
     font-family: 'Roboto';
     color: #2d2d2d;
